--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=your_openai_api_key
 PORT=3000
 HOST=0.0.0.0
-CORS_ORIGINS=http://localhost:5173
+CORS_ORIGINS=http://localhost:5173,http://72.56.87.146:5173
 RATE_LIMIT_MAX=60
 RATE_LIMIT_WINDOW=1 minute
