dev: reboot-proof dev stack (systemd user service + deps pins)

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:all": "concurrently \"npm --prefix apps/api run dev\" \"npm --prefix apps/web run dev:public\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@openai/codex-sdk": "^0.77.0"
-  },
-  "type": "module"
+  "dependencies": {},
+  "type": "module",
+  "devDependencies": {
+    "concurrently": "^9.2.1"
+  }
 }
